--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.AZainApps.apni_mandi">
    <application
-        android:label="apni_mandi"
+        android:label="mandi_Admin"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
