--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.0.13
   image_picker: ^0.8.4+9
   intl: ^0.17.0
+  csc_picker: ^0.2.6
 
 dev_dependencies:
   flutter_test:
